<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:id="@+id/firstFavorite"
    android:background="@color/white"
    tools:context=".Favorites">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@color/yellow"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <ImageButton
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="end"
            android:layout_marginEnd="15sp"
            android:background="@color/transparent"
            android:clickable="true"
            android:contentDescription="@string/f4"
            android:src="@drawable/ic_baseline_edit_24"
            app:tint="@color/white" />


    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60sp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="50sp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_marginTop="60sp"
                android:layout_width="98dp"
                android:layout_height="93dp"
                android:layout_gravity="center"
                android:contentDescription="@string/f5"
                android:layout_marginBottom="20sp"
                android:src="@drawable/star_icon"
                app:tint="@color/general_icon_color" />

            <TextView
                android:id="@+id/my_text"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:text="@string/f1"
                android:textColor="@color/general_icon_color"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="381dp"
                android:layout_height="64dp"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:text="@string/f2"
                android:textColor="@color/r_text_color"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="379dp"
                android:layout_height="66dp"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:text="@string/f3"
                android:textColor="@color/r_text_color"
                android:textSize="20sp" />
        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:contentDescription="@string/f6"
        android:backgroundTint="@color/colored_icon_color"
        android:clickable="true"
        android:src="@drawable/add_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="30sp"
        app:fabSize="mini"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>