<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EventActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:background="@color/yellow"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/e1"
            android:textSize="25sp" />
        <ImageView
            android:id="@+id/backToPrevious"
            android:layout_width="50sp"
            android:layout_height="30sp"
            android:layout_gravity="start"
            android:clickable="true"
            android:contentDescription="Going back to favorite fragment"
            android:layout_marginRight="15sp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60sp"
        app:layout_constraintTop_toBottomOf="@id/main_toolbar"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/event1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:padding="10sp"
                android:text="@string/e2"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/event2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:padding="10sp"
                android:text="@string/e3"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/event3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:padding="10sp"
                android:text="@string/e4"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/event4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:padding="10sp"
                android:text="@string/e5"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/event5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:padding="10sp"
                android:text="@string/e6"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/event6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:padding="10sp"
                android:text="@string/e7"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/event7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:padding="10sp"
                android:text="@string/e8"
                android:textColor="@color/black"
                android:textSize="25sp" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>