<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/ideas_fragment_background_color"
    tools:context=".Ideas">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="60sp"
        android:background="@color/yellow"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_title"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="15sp"
                android:layout_marginTop="15sp"
                android:text="@string/i1"
                android:textColor="@color/settings_icon_color"
                android:textSize="30sp"
                />
            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15sp"
                android:text="@string/i2"
                android:textColor="@color/settings_icon_color"
                android:textSize="20sp"
                />
            <LinearLayout
                android:id="@+id/imageView12"
                android:layout_width="387dp"
                android:layout_height="224dp"
                android:layout_margin="15sp"
                android:background="@drawable/dinner_backround_image_foreground"
                android:orientation="vertical"
               >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="84dp"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="15sp"
                    android:text="@string/i3"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:text="@string/i4"
                    android:textColor="@color/white"
                    android:textSize="20sp"

                    />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>