<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layerForSkeletonOfRoutine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:visibility="visible">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="15sp"
        android:background="@color/title_background_color"
        android:text="@string/r23"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15sp"
        android:orientation="horizontal"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="55sp"
            android:layout_height="50sp"
            android:layout_margin="5sp"
            >

            <ImageView
                android:id="@+id/clockIcon"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:src="@drawable/myclock"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/notificationIcon"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/mychat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clockIcon"
                app:layout_constraintVertical_bias="0.695" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/adjustable"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/routineName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r21"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/routStatusDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r22"
                android:textColor="@color/r_text_color"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>